<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".countdowmTimer.TimerActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="3"
            android:text="Switch on to start timer"/>
        <Switch
            android:id="@+id/start_switch"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_access_time_pink_24dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "Time"
                            android:textSize="30dp"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/time_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="0 sec"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp"
                        android:paddingStart="60dp"
                        android:paddingLeft="100dp"
                        android:layout_gravity="bottom"
                        android:textSize="20dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/timeSetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_keyboard_arrow_right_pink_24dp"
                    android:onClick="timeSetButtonClicked"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_queue_music_pink_24dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "Sound"
                            android:textSize="30dp"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/sound_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Ringtone"
                        android:paddingTop="0dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="60dp"
                        android:paddingLeft="24dp"
                        android:layout_gravity="bottom"
                        android:textSize="20dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/soundSetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_keyboard_arrow_right_pink_24dp"
                    android:onClick="soundSetButtonClicked"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="SAVE"
            android:textSize="24dp"
            android:textColor="#ffffff"
            android:onClick="saveButtonClicked"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="CANCEL"
            android:textSize="24dp"
            android:textColor="#ffffff"
            android:onClick="cancelButtonClicked"/>
    </LinearLayout>
</LinearLayout>