<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ListView
        android:id="@+id/timerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd = "true"
        android:src = "@drawable/ic_add_circle_pink_24dp"
        app:fabSize="auto"
        app:useCompatPadding="true" />
</RelativeLayout>